modified:   13. Strings and Text Processing/The Anatomy of a String.ipynb

--- a/13. Strings and Text Processing/The Anatomy of a String.ipynb
+++ b/13. Strings and Text Processing/The Anatomy of a String.ipynb
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -375,12 +375,12 @@
    },
    "outputs": [],
    "source": [
-    "string completeThisMessage = \"_ : (enter yes or no), I can change characters in a string\";"
+    "string completeThisMessage = \"_ : (enter 'y' or 'n'), I can change characters in a string\";"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -456,16 +456,16 @@
    "outputs": [
     {
      "ename": "Error",
-     "evalue": "(2,28): error CS1012: Too many characters in character literal",
+     "evalue": "(2,1): error CS0200: Property or indexer 'string.this[int]' cannot be assigned to -- it is read only",
      "output_type": "error",
      "traceback": [
-      "(2,28): error CS1012: Too many characters in character literal"
+      "(2,1): error CS0200: Property or indexer 'string.this[int]' cannot be assigned to -- it is read only"
      ]
     }
    ],
    "source": [
     "// ...but we may not change them\n",
-    "completeThisMessage[ 0 ] = 'no';"
+    "completeThisMessage[ 0 ] = 'n';"
    ]
   },
   {
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
