modified:   13. Strings and Text Processing/The Anatomy of a String.ipynb

--- a/13. Strings and Text Processing/The Anatomy of a String.ipynb
+++ b/13. Strings and Text Processing/The Anatomy of a String.ipynb
@@ -184,7 +184,131 @@
     }
    },
    "source": [
-    "<br>"
+    "##### `string`s are Immutable "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "One pretty significant feature (or restriction, depending on how you look at it) of the `string` class, is that,although each character may be *read*, the character sequences stored in a variable of the class **can never be changed** (**immutable**)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "string completeThisMessage = \"_ : (enter 'y' or 'n'), I can change characters in a string\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>_</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "// we may access the characters in a string for read purposes...\n",
+    "completeThisMessage[ 0 ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(2,1): error CS0200: Property or indexer 'string.this[int]' cannot be assigned to -- it is read only",
+     "output_type": "error",
+     "traceback": [
+      "(2,1): error CS0200: Property or indexer 'string.this[int]' cannot be assigned to -- it is read only"
+     ]
+    }
+   ],
+   "source": [
+    "// ...but we may not change them\n",
+    "completeThisMessage[ 0 ] = 'n';"
    ]
   },
   {
@@ -326,42 +450,12 @@
     }
    },
    "source": [
-    "<br>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "##### `string`s are Immutable "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "One pretty significant feature (or restriction, depending on how you look at it) of the `string` class, is that,although each character may be *read*, the character sequences stored in a variable of the class **can never be changed** (**immutable**)."
+    "While `string`s are very similar to the char arrays (`char[]`), they duffer in that each character in the `char[]` *can* be modified.    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -375,12 +469,13 @@
    },
    "outputs": [],
    "source": [
-    "string completeThisMessage = \"_ : (enter 'y' or 'n'), I can change characters in a string\";"
+    "// Modify the first letter in the character array to read '_' instead of 'T'\n",
+    "stringIsh[ 0 ] = '_';"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -396,7 +491,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"dni-plaintext\"><pre>_</pre></div><style>\r\n",
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\"><pre>_</pre></div></td></tr><tr><td>1</td><td><div class=\"dni-plaintext\"><pre>h</pre></div></td></tr><tr><td>2</td><td><div class=\"dni-plaintext\"><pre>i</pre></div></td></tr><tr><td>3</td><td><div class=\"dni-plaintext\"><pre>s</pre></div></td></tr><tr><td>4</td><td><div class=\"dni-plaintext\"><pre> </pre></div></td></tr><tr><td>5</td><td><div class=\"dni-plaintext\"><pre>i</pre></div></td></tr><tr><td>6</td><td><div class=\"dni-plaintext\"><pre>s</pre></div></td></tr><tr><td>7</td><td><div class=\"dni-plaintext\"><pre> </pre></div></td></tr><tr><td>8</td><td><div class=\"dni-plaintext\"><pre>t</pre></div></td></tr><tr><td>9</td><td><div class=\"dni-plaintext\"><pre>e</pre></div></td></tr><tr><td>10</td><td><div class=\"dni-plaintext\"><pre>d</pre></div></td></tr><tr><td>11</td><td><div class=\"dni-plaintext\"><pre>i</pre></div></td></tr><tr><td>12</td><td><div class=\"dni-plaintext\"><pre>o</pre></div></td></tr><tr><td>13</td><td><div class=\"dni-plaintext\"><pre>u</pre></div></td></tr><tr><td>14</td><td><div class=\"dni-plaintext\"><pre>s</pre></div></td></tr></tbody></table><style>\r\n",
        ".dni-code-hint {\r\n",
        "    font-style: italic;\r\n",
        "    overflow: hidden;\r\n",
@@ -435,37 +530,7 @@
     }
    ],
    "source": [
-    "// we may access the characters in a string for read purposes...\n",
-    "completeThisMessage[ 0 ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "(2,1): error CS0200: Property or indexer 'string.this[int]' cannot be assigned to -- it is read only",
-     "output_type": "error",
-     "traceback": [
-      "(2,1): error CS0200: Property or indexer 'string.this[int]' cannot be assigned to -- it is read only"
-     ]
-    }
-   ],
-   "source": [
-    "// ...but we may not change them\n",
-    "completeThisMessage[ 0 ] = 'n';"
+    "stringIsh"
    ]
   },
   {
