modified:   13. Strings and Text Processing/The Anatomy of a String.ipynb

--- a/13. Strings and Text Processing/The Anatomy of a String.ipynb
+++ b/13. Strings and Text Processing/The Anatomy of a String.ipynb
@@ -121,7 +121,11 @@
    "source": [
     "The `System.String` class is what enables us to directly handle strings in $C\\#$.    \n",
     "   \n",
-    "For declaring the strings, we will continue using the keyword `string`, which is an alias in C# of the `System.String` class from $.NET\\,Framework$."
+    "For declaring the strings, we will continue using the keyword `string`, which is an alias in C# of the `System.String` class from $.NET\\,Framework$.\n",
+    "   \n",
+    "The `string` type is *unique from other data types*.      \n",
+    "\n",
+    "It is itself a `class`, and as such, it complies adherently towards the principles of *object-oriented programming*. It's values are stored in the **dynamic memory** (managed **heap**), and the variables of type `string` keep a **reference to an object** in the **heap**."
    ]
   },
   {
@@ -166,10 +170,7 @@
     }
    },
    "source": [
-    "The usage of `System.String` is **not the ideal and universal solution** – sometimes it is appropriate to use different character structures.   \n",
-    "\n",
-    "The `string` type is unique from other data types.    \n",
-    "It is itself a `class`, and as such, it complies adherently towards the principles of *object-oriented programming*. It's values are stored in the **dynamic memory** (managed **heap**), and the variables of type `string` keep a **reference to an object** in the **heap**."
+    "The usage of `System.String` is **not the ideal and universal solution** – sometimes it is appropriate to use different character structures.   "
    ]
   },
   {
@@ -323,7 +324,7 @@
     }
    },
    "source": [
-    "##### What's the Difference Between a `string` and a `char[]`?"
+    "##### There's a Difference Between a `string` and a `char[]`"
    ]
   },
   {
