modified:   13. Strings and Text Processing/The Anatomy of a String.ipynb

--- a/13. Strings and Text Processing/The Anatomy of a String.ipynb
+++ b/13. Strings and Text Processing/The Anatomy of a String.ipynb
@@ -170,7 +170,7 @@
     }
    },
    "source": [
-    "The usage of `System.String` is **not the ideal and universal solution** – sometimes it is appropriate to use different character structures.   "
+    "The usage of `System.String` is **not the ideal and universal solution** – sometimes it is appropriate to use different character structures. Take for example the following **2 reasons to consider another character structure**:   "
    ]
   },
   {
@@ -185,7 +185,7 @@
     }
    },
    "source": [
-    "##### `string`s are Immutable "
+    "##### 1. Even Though They May Be Easier To Deal With, `string`s Are  Also Immutable, "
    ]
   },
   {
@@ -324,7 +324,7 @@
     }
    },
    "source": [
-    "##### There's a Difference Between a `string` and a `char[]`"
+    "##### Despite Being More Manually Intensive To Set Up, `char[]`s Are In Fact Mutable."
    ]
   },
   {
