modified:   13. Strings and Text Processing/The Anatomy of a String.ipynb

--- a/13. Strings and Text Processing/The Anatomy of a String.ipynb
+++ b/13. Strings and Text Processing/The Anatomy of a String.ipynb
@@ -324,7 +324,7 @@
     }
    },
    "source": [
-    "##### Despite Being More Manually Intensive To Set Up, `char[]`s Are In Fact Mutable."
+    "##### 2. Despite Being More Manually Intensive To Set Up, `char[]`s Are In Fact Mutable."
    ]
   },
   {
