modified:   13. Strings and Text Processing/The Anatomy of a String.ipynb

--- a/13. Strings and Text Processing/The Anatomy of a String.ipynb
+++ b/13. Strings and Text Processing/The Anatomy of a String.ipynb
@@ -481,7 +481,7 @@
     }
    },
    "source": [
-    "While `string`s are very similar to the char arrays (`char[]`), they differ in that each character in the `char[]` *can* be modified, whereas, they *can not* be modifed for `string`s.    "
+    "Below, we see that the characters of the `char[]` *can* be modified:  "
    ]
   },
   {
