modified:   13. Strings and Text Processing/The Anatomy of a String.ipynb

--- a/13. Strings and Text Processing/The Anatomy of a String.ipynb
+++ b/13. Strings and Text Processing/The Anatomy of a String.ipynb
@@ -648,6 +648,7 @@
     "        <th style=\"border: 1px solid black;\">L</th>\n",
     "        <th style=\"border: 1px solid black;\">L</th>\n",
     "        <th style=\"border: 1px solid black;\">O</th>\n",
+    "        <th style=\"border: 1px solid black;\">,</th>\n",
     "        <th style=\"border: 1px solid black;\"> </th>\n",
     "        <th style=\"border: 1px solid black;\">C</th>\n",
     "        <th style=\"border: 1px solid black;\">#</th>\n",
