modified:   13. Strings and Text Processing/The Anatomy of a String.ipynb

--- a/13. Strings and Text Processing/The Anatomy of a String.ipynb
+++ b/13. Strings and Text Processing/The Anatomy of a String.ipynb
@@ -1062,7 +1062,7 @@
     }
    },
    "source": [
-    "##### Passing a `string` Expression"
+    "##### By Passing the Value of an Operation Which Returns a `string`"
    ]
   },
   {
