new file:   13. Strings and Text Processing/String Operations.ipynb modified:   13. Strings and Text Processing/The Anatomy of a String.ipynb

--- a/13. Strings and Text Processing/The Anatomy of a String.ipynb
+++ b/13. Strings and Text Processing/The Anatomy of a String.ipynb
@@ -642,7 +642,7 @@
    "source": [
     "Declaring a `string` only accounts for the *variable declaration* of type `string`, this is *not* equivalent to *setting a variable* and *allocating memory for it*!    \n",
     "    \n",
-    "With the *declaration* we inform the compiler that the variable `stringName` will be used, and the expected type for it is `string`.  \n",
+    "With the declaration, we inform the compiler that *the variable* `stringName` *will be used*, and the expected *type* for it is `string`.  \n",
     "   \n",
     "We **do not** create a variable in the memory, and it is **not available for processing yet** (value is `null`, which means no value)."
    ]
