modified:   13. Strings and Text Processing/String Operations.ipynb

--- a/13. Strings and Text Processing/String Operations.ipynb
+++ b/13. Strings and Text Processing/String Operations.ipynb
@@ -344,6 +344,21 @@
     }
    },
    "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "##### `.Equals()` Is Case Sensitive ( By Default )"
    ]
   },
