modified:   13. Strings and Text Processing/String Operations.ipynb

--- a/13. Strings and Text Processing/String Operations.ipynb
+++ b/13. Strings and Text Processing/String Operations.ipynb
@@ -1057,27 +1057,25 @@
     }
    },
    "source": [
-    "Please note that according to the `Compare(…)` and `CompareTo(…)` methods, **the small letters are lexicographically before the capital ones**.\n",
-    "\n",
-    "The correctness of this rule is quite controversial as in the $Unicode$ table the capital letters are before the small ones. For example due to the standard $Unicode$, the letter $A$ has a code $65$, which is smaller than the code of the letter $a$  has code $97$."
+    "##### Lexicographical Comparison Does Not Follow The Arrangement in the Unicode Table."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Please note that, according to the `Compare(…)` and `CompareTo(…)` methods, **the small letters are lexicographically before the capital ones**.\n",
+    "   \n",
+    "The correctness of this rule is quite controversial as in the $Unicode$ table the capital letters are before the small ones. For example due to the standard $Unicode$, the letter $A$ has a code $65$, which is smaller than the code of the letter $a$  has code $97$."
+   ]
   }
  ],
  "metadata": {
