modified:   13. Strings and Text Processing/Comparing Strings.ipynb

--- a/13. Strings and Text Processing/Comparing Strings.ipynb
+++ b/13. Strings and Text Processing/Comparing Strings.ipynb
@@ -73,7 +73,7 @@
     }
    },
    "source": [
-    "#### Comparison for Equality"
+    "### Comparison for Equality"
    ]
   },
   {
@@ -358,7 +358,7 @@
     }
    },
    "source": [
-    "##### `.Equals()` Is Case Sensitive ( By Default )"
+    "#### `.Equals()` Is Case Sensitive ( By Default )"
    ]
   },
   {
@@ -532,7 +532,7 @@
     }
    },
    "source": [
-    "#### Comparison For Alphabetical Order"
+    "### Comparison For Alphabetical Order"
    ]
   },
   {
@@ -822,7 +822,7 @@
     }
    },
    "source": [
-    "##### `.CompareTo()` Is Case Sensitive...But `string.Compare()` Has An Option To Ignore Case"
+    "#### `.CompareTo()` Is Case Sensitive...But `string.Compare()` Has An Option To Ignore Case"
    ]
   },
   {
@@ -1056,7 +1056,7 @@
     }
    },
    "source": [
-    "##### Lexicographical Comparison Does Not Follow The Arrangement in the Unicode Table."
+    "#### Lexicographical Comparison Does Not Follow The Arrangement in the Unicode Table."
    ]
   },
   {
