modified:   13. Strings and Text Processing/Comparing Strings.ipynb

--- a/13. Strings and Text Processing/Comparing Strings.ipynb
+++ b/13. Strings and Text Processing/Comparing Strings.ipynb
@@ -608,7 +608,7 @@
     "The `.CompareTo(…)` method from the `string` class returns a **negative value**, **zero**, or **a positive value** depending on the **lexical order of the two compared strings**.    \n",
     "\n",
     "- A **negative value** means that the first string is lexicographically *before* the second\n",
-    "- A **Zero** means that the two strings are *equal* \n",
+    "- A **zero** means that the two strings are *equal* \n",
     "- A **positive value** means that the first string is lexicographically *after* the second"
    ]
   },
