modified:   13. Strings and Text Processing/Comparing Strings.ipynb

--- a/13. Strings and Text Processing/Comparing Strings.ipynb
+++ b/13. Strings and Text Processing/Comparing Strings.ipynb
@@ -436,9 +436,7 @@
     }
    },
    "source": [
-    "In practice, we are often interested of only the actual text content when comparing two strings, regardless of the character casing (uppercase / lowercase).    \n",
-    "   \n",
-    "To **ignore case** in string comparison, we can use the `Equals(…)` method with the parameter `StringComparison.CurrentCultureIgnoreCase`:"
+    "In practice, we are often interested of only the actual text content when comparing two strings, regardless of the character casing (uppercase / lowercase). To **ignore case** in string comparison, we can use the `Equals(…)` method with the parameter `StringComparison.CurrentCultureIgnoreCase`:"
    ]
   },
   {
